# otrail-decomp

./: .gitignore  Agent-Playbook.md  Makefile  README.md  otrail.py  recovery-notes.md  xmake.lua
config/: candidate_routine_prefix_fixtures.json  entry_bootstrap_fixtures.json  entry_handoff_fixtures.json  entry_handoff_trace_fixtures.json  entry_loader_fixtures.json  entry_tail_fixtures.json  entry_token_fixtures.json  entry_unpacker_blocks_1274f_12845.json  functions.json  match_targets.json  progress_status.json  segments.json  symbols.json  unpacked_motif_fixtures.json  unpacked_runtime_fixtures.json  unpacked_runtime_map.json  unpacked_window_fixtures.json  unpacker_fixtures.json
docs/: ARCHITECTURE.md  LZEXE_unpacking.md  _config.yml  decompiling.md  index.md  matching.md  segment_map.md
dos/: .gitignore  BUILD.BAT  README.md
logic/: entry_bootstrap.c  entry_bootstrap.h  entry_loader_model.c  entry_loader_model.h  entry_loader_readable.c  entry_loader_readable.h  entry_unpacker_engine.c  entry_unpacker_internal.h  entry_unpacker_model.c  entry_unpacker_model.h  entry_unpacker_readable.c  entry_unpacker_readable.h  unpacked_runtime_fragments.c  unpacked_runtime_fragments.h  unpacked_runtime_map.c  unpacked_runtime_map.h
match/: README.md
port/: CMakeLists.txt  README.md  pal.h
port/assets/: FORMATS.md  make_font.py  pcx.py  pcxlib.py
port/core/: font8x8.h  game.c  game.h  learn.c  main.c  pcx.c  pcx.h  screen.c  screen.h  title.c  topten.c  trail.c  travel.c
port/platform/file/: pal_file.c
port/platform/sdl/: pal_sdl.c
src/: seg000_main.c  (+384 more)
(+74 files in other folders)
